--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.8.1
+Brotli==1.1.0
 Django==5.0.6
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
+gunicorn==22.0.0
 mysqlclient==2.2.4
+packaging==24.0
 python-dotenv==1.0.1
 sqlparse==0.5.0
 tzdata==2024.1
+whitenoise==6.6.0
